welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: illegal start of simple expression
  if (type(a/3)==Int) {
      ^fizzBuzz:15: error: ')' expected but '}' found.
}
^