welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
  var x=""
  if (type(a/3)==Int) {
    if (type(a/5)==Int) {
    	x="Fizz Buzz"
    } else {
      x="Fizz"
    }
  } else if (type(a/5)==Int) {
    x="Buzz"
  } else {
    x=""+a
  }
  x
}
  